# zeam-testnet

./: .gitignore  LICENSE  README.md  app.go  build.sh  cognition.go  compute.go  go.mod  go.sum  ignite.go  interface.go  lifecycle.go  magnet.go  main.go  makefile  model_runner.wasm  presenceshell.jsx  runtime.go  storage.go  types.go  utils.go  vault.go
PresenceShell/: App.jsx  presenceshell.jsx
app/: build.sh  dev.sh
app/src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
arb/: execution_planner.go  executor.go  flashblocks.go  flow_engine.go  flow_state.go  mempool_parser.go  opportunities.go  opportunity_queue.go  orchestrator.go  positions.go  presigned.go  prices.go  rpc_prices.go  shotgun.go  strategy.go  strategy_arb.go  strategy_backrun.go  strategy_crosschain.go  strategy_liquidation.go  types.go  zeam_detector.go  zeam_executor.go  zeam_multihop.go
attention/: attention.go  context.go
cmd/: ipc.go  ipc_listen_unix.go  ipc_listen_windows.go  main.go
content/: dag.go  protocol.go  providers.go  store.go  website.go
contracts/: RevenuePool.sol  ZeamRegistry.sol
embed/: builder.go  embedding.go  similarity.go
grammar/: builder.go  distributed.go  distributed_test.go  flow_words.go  grammar_test.go  parser.go  semantics.go  sentence.go
identity/: consent.go  delegation.go  disclosure.go  fork_state.go  hardware_gate.go  identity.go  layers.go  passkey.go  recovery.go  rights.go  rotation.go  stateless.go  stateless_bridge.go  (+1 more)
(+109 files in other folders)
